--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -49,6 +49,8 @@ h3{
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   position: absolute;
+  width: 35px;
+  height: 35px;
 
 }
 
