--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -10,7 +10,7 @@ body {
 #countryText {
   position: absolute;
   display: flex;
-  justify-content: center; /* Centers horizontally */
+  justify-content: center;
   align-items: center;
   text-align: center;
   color: #ffffff;
@@ -33,11 +33,11 @@ button {
 }
 
 h3{
-  color: black;
+  color: white;
   margin: 0;
   position: absolute;
   top: 90%;
-  left: 55%;
+  left: 56.5%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
@@ -65,14 +65,43 @@ h3{
   background-color: #ff0000;
 }
 
-.leaderboard {
-
-  top: 2%;
-  left: 2%;
-
+.songPlayer {
+  top: 13%;
+  left: 50%;
+  transform: translateX(-50%);
+  justify-content: center;
+  -ms-transform: translate(-50%, -50%);
   position: absolute;
-  height: 500px;
-  width: 500px;
+  height: 50px;
+  width: 200px;
   background-color: #ff0000;
+}
+
+.leaderboard{
+  position: absolute;
+  top: 0;
+  left: 5%;
+  flex-direction: column;
+  display: flex;
+  text-align: center;
+  color: white;
+  opacity: 70%;
+}
+
+.leaderboardCard {
+
+  top: 5%;
+  left: 5%;
+  padding-bottom: 5px;
+
+
+  margin: 5px;
+  height: 60px;
+  width: 200px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  opacity: 70%;
+  text-align: center;
+  color: black;
 
 }
