--- a/back-end/spotify-web-test/templates/index.html
+++ b/back-end/spotify-web-test/templates/index.html
@@ -11,12 +11,19 @@
         <input type="text" name="artist_name" placeholder="Enter artist name" required>
         <button type="submit">Search</button>
     </form>
-</body>
 
-<body>
-    <h2>Login</h2>
-    <form action="/login" >
-        <button type="submit">login</button>
-    </form>
+    <div class="profile">
+        <h2>Profile</h2>
+        {% if session['profile_pic'] %}
+            <img src="{{ session['profile_pic'] }}" alt="Profile Picture" style="width: 100px; height: auto; border-radius: 50%;">
+        {% else %}
+            <p>No profile picture available.</p>
+        {% endif %}
+        
+        <h2>Login</h2>
+        <form action="/login">
+            <button type="submit">Login</button>
+        </form>
+    </div>
 </body>
 </html>
