--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -47,14 +47,20 @@ body {
 
 .button button:hover {
   opacity: 100%;
+  box-shadow: 0 0 35px white;
  }
+
+.profile button:hover {
+  opacity: 100%;
+  box-shadow: 0 0 35px white;
+}
 
 h3{
   color: white;
   margin: 0;
   position: absolute;
-  top: 90.7%;
-  left: 56.5%;
+  top: 90.8%;
+  left: 58.5%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
@@ -62,7 +68,7 @@ h3{
 .streak{
 
   top: 90.7%;
-  left: 55%;
+  left: 60%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   position: absolute;
@@ -71,14 +77,12 @@ h3{
 
 }
 
-.profile {
+.profile button{
   top: 5%;
   right: 0;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   position: absolute;
-  height: 50px;
-  width: 200px;
   opacity: 70%;
 }
 
