--- a/front-end/src/correctPop.css
+++ b/front-end/src/correctPop.css
@@ -1,32 +1,35 @@
 .modal {
     position: absolute;
     inset: 0;
-    background: rgba(255, 255, 255, 0.7);
+
     align-items: center;
     justify-content: center;
     z-index: 100;
     opacity: 100%;
 }
 
+
 .content {
     opacity: 100%;
     position: absolute;
+    background: rgba(0, 0, 0, 0.9);
+    color: white;
 
-    border-radius: 4px;
+    border-radius: 0;
     align-content: center;
 
-    top: 10%;
-    left: 20%;
 
-    width: 60%;
+    width: 100%;
     text-align: center;
-    height: 70%;
-    color: black;
+    height: 100%;
 }
 
+
+
 .popButtons button {
-    align-content: center;
-    background-color: transparent;
+
+    background-color: black;
+    color: white;
 
 }
 
