--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -86,6 +86,16 @@ h3{
   opacity: 70%;
 }
 
+.profile img{
+  top: 5%;
+  right: 5%;
+  max-width: 10vmin;
+  max-height: 10vmin;
+  border-radius: 50%;
+  position: absolute;
+  opacity: 70%;
+}
+
 .leaderboard{
   position: absolute;
   top: 0;
