--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -50,11 +50,6 @@ body {
   box-shadow: 0 0 35px white;
  }
 
-.profile button:hover {
-  opacity: 100%;
-  box-shadow: 0 0 35px white;
-}
-
 h3{
   color: white;
   margin: 0;
@@ -77,20 +72,11 @@ h3{
 
 }
 
-.profile button{
-  top: 5%;
-  right: 0;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  position: absolute;
-  opacity: 70%;
-}
-
 .profile img{
   top: 5%;
   right: 5%;
-  max-width: 10vmin;
-  max-height: 10vmin;
+  max-width: 8vmin;
+  max-height: auto;
   border-radius: 50%;
   position: absolute;
   opacity: 70%;
@@ -98,7 +84,7 @@ h3{
 
 .leaderboard{
   position: absolute;
-  top: 0;
+  top: 5%;
   left: 5%;
   flex-direction: column;
   display: flex;
